@@ -1,3 +1,7 @@
+2014-03-28  Andreas Kling  <akling@apple.com>
+
+        Rebaseline bindings tests.
+
 2014-03-28  Michael Saboff  <msaboff@apple.com>
 
         Unreviewed, rolling r166248 back in.
